Describe your changes here

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/suggestify
+# MONGO_URI=mongodb://localhost:27017/suggestify
+MONGO_URI=mongodb+srv://khandelwalsoumya655:suggestifypassword@suggestify.yk1lg8q.mongodb.net/suggestify?retryWrites=true&w=majority
+
 JWT_SECRET=suggestify_super_secret_key_2025_XYZ$#@!
 PORT=5000
